--- a/css/demo.css
+++ b/css/demo.css
@@ -20,39 +20,37 @@ body{
 	font-family:verdana;
 }
 
-img{
-	height="110";
-	 width="110";
-}
 
-#userPic{
-	float:left;
-	position:inherit;
-	margin-top: -12px;
-	margin-left: 280px;
-}
-
-#wrapper{
+#flip-counterUsers{
 	float:right;
-	position:relative;
-	left:-37%;
-	margin-top: 10px;
-}
+	position: absolute;
+  	right: 50%;
+  	margin-right: -160px;
+  }
 
 
-
-#rides{
-	float:left;
-	position:relative;
-	left:3%;
-	margin-top: 120px;
+#flip-counterRides{
+	float:right;
+	position: absolute;
+  	right: 50%;
+  	margin-right: -192px;
+  	margin-top: 110px;
 }
 
 #hitchhikingPic{
-	float:left;
-	position:inherit;
-	margin-top: 100px;
-	margin-left: -110px;
+	float:right;
+	position: absolute;
+	right: 50%;
+  	margin-right: 210px;
+  	margin-top: 90px;
+}
+
+#userPic{
+	float:right;
+	position: absolute;
+	right: 50%;
+  	margin-right: 210px;
+  	margin-top: -20px;
 }
 /*
 #wrapper{float:right;position:relative;left:-50%;margin-top:30px}
