--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,16 +1,23 @@
 iframe {
 	width:235px;
-	height:105px;
+	height:107px;
 	border-bottom: #E5E5E5 1px solid;
 }
 
-#Layer1{
+.Layer1{
 	position:absolute; 
-	left:28px;
-	top:57px;
 	width:240px;
 	height:440px;
 	z-index:1;
+}
+.mask{
+	position:absolute;
+	left:28px;
+	top:54px; 
+	width:240px;
+	height:438px;
+	z-index:2;
+	clip: rect(0px,240px,438px,0px);
 }
 table{
 	width: 277px;
